--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'application'
+
+mainClassName = "com.workday.prometheus.test.Main"
 
 dependencies {
     compile "io.prometheus:simpleclient:0.0.19"
     compile "io.prometheus:simpleclient_common:0.0.19"
     compile "io.prometheus:simpleclient_hotspot:0.0.19"
 }
+
 
