--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '1.2.4'
+}
+
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'application'
 
 mainClassName = "com.workday.prometheus.test.Main"
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile "io.prometheus:simpleclient:0.0.19"
