--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://artifactory.workday.com/artifactory/anon/gradle/gradle/3.3-workday-1/gradle-3.3-workday-1.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
